# mesh_intersection

./: .gitignore  CMakeLists.txt  main.cpp
data/: Cone.ply  Cone_refine.ply  Plane.ply  Plane_refine.ply
include/examples/: co_refinement.h  intersection_line.h  mesh_intersection.h
